apps/base/matrix/well-known/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: well-known-cors
  namespace: app-matrix
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    accessControlAllowMethods:
      - GET
      - OPTIONS
    accessControlAllowHeaders:
      - Origin
      - X-Requested-With
      - Content-Type
      - Accept
      - Authorization
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: well-known-matrix-cors
  namespace: app-matrix
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    accessControlAllowMethods:
      - GET
      - HEAD
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - X-Requested-With
      - Content-Type
      - Authorization
      - Date
    accessControlExposeHeaders:
      - Synapse-Trace-Id
      - Server
