apps/base/matrix/well-known/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: well-known
  namespace: app-matrix
spec:
  entryPoints:
    - tunnel
  routes:
    - match: Host(`borooka.ee`) && PathPrefix(`/_matrix/`)
      kind: Rule
      priority: 200
      middlewares:
        - name: well-known-matrix-cors
          namespace: app-matrix
      services:
        - name: synapse
          port: 8008
          serversTransport: synapse-transport-default
    - match: Host(`borooka.ee`) && PathPrefix(`/.well-known/matrix/`)
      kind: Rule
      priority: 100
      middlewares:
        - name: well-known-cors
          namespace: app-matrix
      services:
        - name: well-known
          port: 80
    - match: Host(`borooka.ee`)
      kind: Rule
      priority: 1
      services:
        - name: well-known
          port: 80
